[package]
name = "confighub"
version = "0.1.0"
edition = "2021"
description = "Serveur de configuration dynamique pour microservices - Projet 11"

[[bin]]
name = "confighub-server"
path = "src/main.rs"

[lib]
name = "confighub"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1.10"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
axum-test = "15"